--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "html-webpack-plugin": "^2.30.1",
     "http-proxy-middleware": "^0.17.4",
     "jquery": "^3.3.1",
+    "moment": "^2.22.2",
     "node-sass": "^4.9.3",
     "opn": "^5.1.0",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
